--- a/index.html
+++ b/index.html
@@ -8,7 +8,38 @@
     <title>Shady Shop</title>
 </head>
 <body>
-    hello world
+    <header class="header" id="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h1 class="text-center text-capitalize text-start">totally legit shop</h1>
+                </div>
+                <div class="nav-div">
+                    <ul class="nav main-nav justify-content-end">
+                        <li class="main-nav-item nav-item">
+                            <buttons class="btn">about</buttons>
+                        </li>
+                        <li class="main-nav-item nav-item">
+                            <buttons class="btn">menu</buttons>
+                        </li>
+                        <li class="main-nav-item nav-item">
+                            <buttons class="btn">contact</buttons>
+                        </li>
+                        <li class="main-nav-item nav-item">
+                            <buttons class="btn">
+                                <span class="checkout"></span>
+                            </buttons>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main class="main" id="main"></main>
+
+    <footer class="footer" id="footer"></footer>
+    
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
 </body>
